--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "homepage": "https://username.github.io/repository-name"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
